<resources>
    <string name="app_name">Information Technology Journals</string>
    <string name="about_page_icon">about page icon</string>
    <string name="journal">JOURNAL</string>
    <string name="profile">PROFILE</string>
    <string name="photo_profile">photo profile</string>
    <string name="nama_aghni_qisthina_al_rahma">Aghni Qisthina Al Rahma</string>
    <string name="email_aghniqisthi_gmail_com">aghniqisthi@gmail.com</string>
    <string name="back_icon">back icon</string>
    <string name="journal_description">Journal Description</string>
    <string name="journal_cover_image">journal cover image</string>
    <string name="journal_title">Journal Title</string>
    <string name="latest_volume">Latest volume</string>
    <string name="information_technology_journals">Information Technology Journals</string>
    <string name="splash_screen_gif_image">splash screen gif image</string>
    <string name="link_source">Link Source:</string>
    <string name="student_name">Student Name</string>
    <string name="student_email">Student Email</string>
    <string name="student_bangkit_email">Student Bangkit Email</string>
    <string name="email_bangkit">a305dky4028@bangkit.academy</string>
    <string name="share">Share</string>

    <string-array name="data_title">
        <item>Information Systems</item>
        <item>The Journal of Strategic Information Systems</item>
        <item>International Journal of Accounting Information Systems</item>
        <item>International Journal of Information Management</item>
        <item>Information and Software Technology</item>
        <item>Journal of King Saud University - Computer and Information Sciences</item>

        <item>Data and Information Management</item>
        <item>Information and Computation</item>
        <item>Journal of Transportation Systems Engineering and Information Technology</item>
        <item>Journal of Electrical Systems and Information Technology</item>
        <item>Engineering Science and Technology</item>
        <item>Accounting, Management and Information Technologies</item>

    </string-array>

    <string-array name="data_volume">
        <item>Volume 115, May 2023</item>
        <item>Volume 32, March 2023</item>
        <item>Volume 49, June 2023</item>
        <item>Volume 70, June 2023</item>
        <item>Volume 158, June 2023</item>
        <item>Volume 35, March 2023</item>

        <item>Volume 6, October 2022</item>
        <item>Volume 292, June 2023</item>
        <item>Volume 14, December 2014</item>
        <item>Volume 5, December 2018</item>
        <item>Volume 40, April 2023</item>
        <item>Volume 10, October 2000</item>

    </string-array>

    <string-array name="data_desc">
        <item>Information systems are the software and hardware systems that support data-intensive applications. The journal Information Systems publishes articles concerning the design and implementation of languages, data models, process models, algorithms, software and hardware for information systems. Subject areas include data management issues as presented in the principal international database conferences (e.g., ACM SIGMOD/PODS, VLDB, ICDE and ICDT/EDBT) as well as data-related issues from the fields of data mining/machine learning, information retrieval coordinated with structured data, internet and cloud data management, business process management, web semantics, visual and audio information systems, scientific computing, and data science. </item>
        <item>The Journal of Strategic Information Systems focuses on the strategic management, business and organizational issues associated with the introduction and utilization of information systems, and considers these issues in a global context. The emphasis is on the incorporation of IT into organizations strategic thinking, strategy alignment, organizational arrangements and management of change issues. </item>
        <item>The International Journal of Accounting Information Systems will publish thoughtful, well developed articles that examine the rapidly evolving relationship between accounting and information technology. Articles may range from empirical to analytical, from practice-based to the development of new techniques, but must be related to problems facing the integration of accounting and information technology. The journal will address (but will not limit itself to) the following specific issues: control and auditability of information systems; management of information technology; artificial intelligence research in accounting; development issues in accounting and information systems; human–computer interaction research in accounting information systems. </item>
        <item>The International Journal of Information Management (IJIM) is an international, peer-reviewed journal which aims to bring its readers the very best analysis and discussion in the developing field of information management. Information management covers a wide field and we encourage submissions from diverse areas of practice and settings including business, health, education and government. Information management covers a wide field and we encourage submissions from diverse areas of practice and settings including business, health, education and government.</item>
        <item>Information and Software Technology is the international archival journal focusing on research and experience that contributes to the improvement of software development practices. The journal\'s scope includes methods and techniques to better engineer software and manage its development. Articles submitted for review should have a clear component of software engineering or address ways to improve the engineering and management of software development. </item>
        <item> In 2022 the Journal of King Saud University - Computer and Information Sciences will become an author paid open access journal. Authors who submit their manuscript after October 31st 2021 will be asked to pay an Article Processing Charge (APC) after acceptance of their paper to make their work immediately, permanently, and freely accessible to all. Discounts may be available for authors from selected Research4Life countries. The Journal of King Saud University Computer and Information Sciences is a refereed, international journal that covers all aspects of both foundations of computer and its practical applications. </item>

        <item>Data and Information Management publishes original research that focuses on data analytics and application in the fields of library and information science, and information management. It aims to improve the innovation and development of technology, process and solution. DIM is an interdisciplinary peer-reviewed journal concerning business information, academic information, government and public information management, knowledge discovery and organization, semantic analysis, digital humanities and so on. </item>
        <item>Information and Computation welcomes original papers in all areas of theoretical computer science and computational applications of information theory. Survey articles of exceptional quality will also be considered. Particularly welcome are papers contributing new results in active theoretical areas such as Biological computation and computational biology, Computational complexity, Computer theorem-proving, Concurrency and distributed process theory, Cryptographic theory and so on. </item>
        <item>This title discontinued as of 2015. This title publishes a selection of papers from the original Chinese version. Citation information refers to the original papers. The latest published article here is "Fundamental Analyses for Constructing Road-rail Intermodal Freight Transport System" by Guoquan LI, Kazuki TAMURA, Masai MUTO, and Daiki OKUDA. </item>
        <item>This title transferred to Springer Nature as of 2019. The latest published article here is "Gain Enhancement of Patch Antenna Integrated with Metamaterial Inspired Superstrate" by M. Saravanan, V. Beslin Geo, and S.M. Umarani.</item>
        <item>Engineering Science and Technology, an International Journal (JESTECH) (formerly Technology), a peer-reviewed quarterly engineering journal, publishes both theoretical and experimental high quality papers of permanent interest, not previously published in journals, in the field of engineering and applied science which aims to promote the theory and practice of technology and engineering. In addition to peer-reviewed original research papers, the Editorial Board welcomes original research reports, state-of-the-art reviews and communications in the broadly defined field of engineering science and technology. </item>
        <item>This title will be continued as Information and Organization.  The latest published article here is "Transforming Society by Transforming Technology: The Science and Politics of Participatory Design" by Peter M. Asaro.</item>

    </string-array>

    <string-array name="data_link">
        <item>https://www.sciencedirect.com/journal/information-systems</item>
        <item>https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems</item>
        <item>https://www.sciencedirect.com/journal/international-journal-of-accounting-information-systems</item>
        <item>https://www.sciencedirect.com/journal/international-journal-of-information-management</item>
        <item>https://www.sciencedirect.com/journal/information-and-software-technology</item>
        <item>https://www.sciencedirect.com/journal/journal-of-king-saud-university-computer-and-information-sciences</item>

        <item>https://www.sciencedirect.com/journal/data-and-information-management</item>
        <item>https://www.sciencedirect.com/journal/information-and-computation</item>
        <item>https://www.sciencedirect.com/journal/journal-of-transportation-systems-engineering-and-information-technology</item>
        <item>https://www.sciencedirect.com/journal/journal-of-electrical-systems-and-information-technology</item>
        <item>https://www.sciencedirect.com/journal/engineering-science-and-technology-an-international-journal</item>
        <item>https://www.sciencedirect.com/journal/accounting-management-and-information-technologies</item>

    </string-array>

    <string-array name="data_image">
        <item>@drawable/information_systems</item>
        <item>@drawable/strategis_information_system</item>
        <item>@drawable/accounting_information_systems</item>
        <item>@drawable/information_management</item>
        <item>@drawable/information_and_software_technology</item>
        <item>@drawable/computer_and_information_sciences</item>

        <item>@drawable/data_management</item>
        <item>@drawable/information_and_computation</item>
        <item>@drawable/systems_engineering</item>
        <item>@drawable/electrical_systems</item>
        <item>@drawable/engineering_science_and_technology</item>
        <item>@drawable/accounting_management_and_it</item>

    </string-array>
</resources>