<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    tools:context=".AboutActivity"
    tools:viewBindingIgnore="true">

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_headline"
        style="@style/Headings_1"
        android:layout_width="match_parent"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/profile_photos"
        android:contentDescription="@string/photo_profile"
        android:scaleType="centerCrop"
        android:src="@drawable/shape_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_headline" />

    <TextView
        android:id="@+id/txt_name"
        style="@style/Headings_3"
        android:layout_width="match_parent"
        android:text="@string/student_name"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txt_nama"
        style="@style/Data_Profile"
        android:layout_width="match_parent"
        android:text="@string/nama_aghni_qisthina_al_rahma"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_mail"
        style="@style/Headings_3"
        android:layout_width="match_parent"
        android:text="@string/student_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_nama" />

    <TextView
        android:id="@+id/txt_email"
        style="@style/Data_Profile"
        android:layout_width="match_parent"
        android:text="@string/email_aghniqisthi_gmail_com"
        app:layout_constraintTop_toBottomOf="@+id/txt_mail" />

    <TextView
        android:id="@+id/txt_bangkitmail"
        style="@style/Headings_3"
        android:layout_width="match_parent"
        android:text="@string/student_bangkit_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_bangkitemail"
        style="@style/Data_Profile"
        android:layout_width="match_parent"
        android:text="@string/email_bangkit"
        app:layout_constraintTop_toBottomOf="@+id/txt_bangkitmail" />

</androidx.constraintlayout.widget.ConstraintLayout>