<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_journal"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_journalCover"
            android:layout_width="95dp"
            android:layout_height="116dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/journal_cover_image"
            android:src="@drawable/accounting_information_systems"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_journalTitle"
            android:layout_width="match_parent"
            style="@style/Title"
            android:text="@string/journal_title"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/img_journalCover" />

        <TextView
            android:id="@+id/txt_journalVol"
            android:layout_width="match_parent"
            style="@style/Paragraph"
            android:text="@string/latest_volume"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/txt_journalTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>